# vrchat-avatar-switcher

./: .gitignore  LICENSE  README.md  pyproject.toml
avatar_switch/: avatar_switcher.py  errors.py  vrchat_api.py
scripts/: console_switch.py
